force-app/main/default/objects/ConfiguracaoDocumentacao__mdt/ConfiguracaoDocumentacao__mdt.object-meta.xml
<CustomObject>
    <label>Configuração de documentação</label>
    <pluralLabel>Configurações de documentação</pluralLabel>
</CustomObject>