force-app/main/default/objects/ConfiguracaoDocumentacao__mdt/fields/NomeDocumento__c.field-meta.xml
<CustomField>
    <fullName>NomeDocumento__c</fullName>
    <inlineHelpText>Nome do documento</inlineHelpText>
    <label>Nome do documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>