force-app/main/default/objects/ConfiguracaoDocumentacao__mdt/fields/Obrigatorio__c.field-meta.xml
<CustomField>
    <fullName>Obrigatorio__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Documento obrigatório?</inlineHelpText>
    <label>Obrigatório?</label>
    <type>Checkbox</type>
</CustomField>