force-app/main/default/objects/ConfiguracaoDocumentacao__mdt/fields/PapelContato__c.field-meta.xml
<CustomField>
    <fullName>PapelContato__c</fullName>
    <label>Papél de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
                <default>true</default>
                <label>Comprador</label>
            </value>
            <value>
                <fullName>Fiador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>